2000-05-10  Adam Fedor  <fedor@gnu.org>

	* NSBundle.m (-classNamed:): Hacks for getting classes from 
	_gnustep_bundle.
	(-principalClass): Likewise.
	(-load): Don't try to call load bundle if we are _gnustep_bundle.

2000-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistantObject.m: ([-methodSignatureForSelector:])
	Fix attempting to handle creation of local method signature rather than
	returning a proxy to a remote one.

2000-05-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: ([-descriptionWithCalendarFormat:locale:])
	fix '%y' format for any year - bug reported by David Relson

2000-05-06  James Dessart <skwirl@cam.org>
	
	* Documentation/gsdoc/NSString.gsdoc : 
	* Documentation/gsdoc/NSString.html  :
	Added some basic doc

2000-05-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: NSHomeDirectoryForUser() protect with locks for
	thread safety.

2000-05-02  Adam Fedor  <fedor@gnu.org>

	* configure.in: Add check for word alignment. Also don't define
	HAVE_SYS_PROC_EXE on systems that need fake main.
	* Headers/gnustep/base/config.h.in: Add define if word-align needed.
	* Source/NSData.m: 
	([NSDataStatic -deserializeTypeTag:andCrossRef:atCursor:]): Use
	memcpy if word alignment needed.
	([NSMutableDataMalloc -serializeTypeTag:andCrossRef:]): Likewise.

2000-04-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: ([+defaultConnection]) create receive port.

2000-04-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHost.m: Improve logging of host/net configuration errors
	* Source/GSTcpPort.m: ditto
	* Source/TcpPort.m: ditto

2000-04-25  Adam Fedor  <fedor@gnu.org>

	* Source/NSBundle.m (+initialize): retain _executable_path.

2000-04-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: Optimised - cache method implementations
	wherever possible in order to avoid objc runtime overheads.

2000-04-23  Richard Frith-Macdonald <rfm@gnu.org>
